--- a/index.html
+++ b/index.html
@@ -3,124 +3,127 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Final 2026</title>
+    <title>ልማት Hub | Premium Edition</title>
     <style>
-        :root { --blue: #003973; --yellow: #FFD700; --bg: #f4f7f9; }
-        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', sans-serif; }
-        body { background: var(--bg); color: #333; }
-        header { background: white; padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; box-shadow: 0 2px 10px rgba(0,0,0,0.1); position: sticky; top: 0; z-index: 1000; }
-        .logo { font-size: 24px; font-weight: 800; color: var(--blue); text-decoration: none; }
-        nav { display: flex; gap: 15px; align-items: center; }
-        nav a { text-decoration: none; color: var(--blue); font-weight: 600; font-size: 0.9rem; cursor: pointer; }
-        .l-btn { padding: 5px 8px; border: 2px solid var(--blue); background: white; cursor: pointer; border-radius: 6px; font-weight: bold; }
-        .l-btn.active { background: var(--blue); color: white; }
-        .yellow-tracker { background: var(--yellow); color: var(--blue); padding: 10px; font-weight: 800; overflow: hidden; white-space: nowrap; }
-        .scrolling-text { display: inline-block; animation: scroll 20s linear infinite; }
+        :root { --dark-bg: #0f172a; --card-bg: rgba(30, 41, 59, 0.7); --accent: #38bdf8; --yellow: #FFD700; }
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Inter', sans-serif; scroll-behavior: smooth; }
+        body { background: var(--dark-bg); color: #f8fafc; line-height: 1.6; }
+
+        /* UNIQUE HEADER */
+        header { background: rgba(15, 23, 42, 0.9); backdrop-filter: blur(10px); padding: 20px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; border-bottom: 1px solid rgba(255,255,255,0.1); }
+        .logo { font-size: 26px; font-weight: 900; color: var(--accent); text-decoration: none; letter-spacing: -1px; }
+        nav a { text-decoration: none; color: #cbd5e1; margin-right: 20px; font-weight: 500; transition: 0.3s; cursor: pointer; }
+        nav a:hover { color: var(--yellow); }
+
+        /* SCROLLING TRACKER */
+        .yellow-tracker { background: var(--yellow); color: #000; padding: 12px; font-weight: 800; overflow: hidden; white-space: nowrap; box-shadow: 0 4px 15px rgba(255, 215, 0, 0.3); }
+        .scrolling-text { display: inline-block; animation: scroll 25s linear infinite; }
         @keyframes scroll { from { transform: translateX(100%); } to { transform: translateX(-100%); } }
-        .container { max-width: 1100px; margin: 20px auto; padding: 0 20px; }
-        .hero { background: var(--blue); color: white; border-radius: 30px; text-align: center; border-bottom: 8px solid var(--yellow); padding: 50px 20px; }
-        .id-input { padding: 15px; width: 280px; border-radius: 12px; border: none; font-size: 1.1rem; text-align: center; margin: 20px 0; }
-        .v-btn { background: var(--yellow); color: var(--blue); border: none; padding: 15px 40px; border-radius: 12px; font-weight: 800; cursor: pointer; }
-        .section-h { font-size: 1.8rem; color: var(--blue); margin: 40px 0 20px; border-left: 10px solid var(--yellow); padding-left: 15px; }
-        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 20px; }
-        .card { background: white; border-radius: 15px; overflow: hidden; box-shadow: 0 5px 15px rgba(0,0,0,0.1); text-align: center; border: 1px solid #ddd; }
-        .card img { width: 100%; height: 140px; object-fit: cover; }
-        .card-body { padding: 15px; font-weight: bold; color: var(--blue); }
-        .faq-card { background: white; padding: 10px 20px; border-radius: 15px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); }
-        details { padding: 15px; border-bottom: 1px solid #eee; cursor: pointer; text-align: left; }
-        summary { font-weight: bold; color: var(--blue); }
+
+        /* PREMIUM HERO */
+        .container { max-width: 1100px; margin: 40px auto; padding: 0 20px; }
+        .hero { background: linear-gradient(135deg, #1e293b 0%, #0f172a 100%); border: 1px solid rgba(255,255,255,0.1); padding: 80px 20px; border-radius: 40px; text-align: center; position: relative; overflow: hidden; }
+        .hero h1 { font-size: 3.5rem; margin-bottom: 20px; background: linear-gradient(to right, #fff, #38bdf8); -webkit-background-clip: text; -webkit-text-fill-color: transparent; }
+        .id-input { background: rgba(255,255,255,0.05); border: 2px solid rgba(56, 189, 248, 0.3); color: white; padding: 18px; width: 320px; border-radius: 15px; font-size: 1.2rem; text-align: center; margin: 25px 0; outline: none; transition: 0.3s; }
+        .id-input:focus { border-color: var(--accent); box-shadow: 0 0 20px rgba(56, 189, 248, 0.2); }
+        .v-btn { background: var(--accent); color: #0f172a; border: none; padding: 18px 50px; border-radius: 15px; font-weight: 800; cursor: pointer; transition: 0.3s; }
+        .v-btn:hover { transform: translateY(-3px); box-shadow: 0 10px 25px rgba(56, 189, 248, 0.4); }
+
+        /* TRACKS & CARDS */
+        .section-h { font-size: 2rem; margin: 60px 0 30px; display: flex; align-items: center; gap: 15px; }
+        .section-h::after { content: ""; height: 2px; flex-grow: 1; background: rgba(255,255,255,0.1); }
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 25px; }
+        .card { background: var(--card-bg); backdrop-filter: blur(10px); border-radius: 25px; overflow: hidden; border: 1px solid rgba(255,255,255,0.1); transition: 0.4s; }
+        .card:hover { transform: translateY(-10px); border-color: var(--accent); }
+        .card img { width: 100%; height: 160px; object-fit: cover; opacity: 0.8; }
+        .card-body { padding: 20px; text-align: center; font-weight: 700; color: #fff; }
+
+        /* FAQ GLASSMORPHISM */
+        .faq-box { background: var(--card-bg); border-radius: 30px; padding: 20px; border: 1px solid rgba(255,255,255,0.05); }
+        details { margin-bottom: 10px; border-radius: 15px; overflow: hidden; background: rgba(255,255,255,0.02); transition: 0.3s; }
+        summary { padding: 20px; cursor: pointer; font-weight: 600; list-style: none; display: flex; justify-content: space-between; align-items: center; }
+        summary::after { content: "+"; color: var(--accent); font-size: 1.5rem; }
+        details[open] summary::after { content: "-"; }
+        details p { padding: 0 20px 20px; color: #94a3b8; }
     </style>
 </head>
-<body>
+<body onload="welcomeUser()">
 
 <header>
     <a href="#" class="logo">ልማት Hub</a>
     <nav>
         <a href="#tr-grid">Tracks</a>
         <a href="#h-faq">FAQ</a>
-        <a onclick="alert('Digital Ethiopia 2026: Empowering 1 Million Citizens.')">About Us</a>
-        <div class="lang-bar">
-            <button class="l-btn active" onclick="setL('en')" id="en-btn">EN</button>
-            <button class="l-btn" onclick="setL('am')" id="am-btn">አማር</button>
-            <button class="l-btn" onclick="setL('om')" id="om-btn">ORM</button>
-            <button class="l-btn" onclick="setL('ti')" id="ti-btn">ትግር</button>
-        </div>
+        <a onclick="showAbout()">About Us</a>
     </nav>
 </header>
 
 <div class="yellow-tracker">
-    <div class="scrolling-text">New: Advanced AI Track is now open! | Join 942,108 citizens today. | Digital Ethiopia Mission 2026.</div>
-</div>
-
-<div style="text-align:center; padding:10px; font-weight:bold;">
-    Active Citizens: <span id="count" style="color:#ef4444">942,108</span>
+    <div class="scrolling-text" id="scroll-msg">Official 2026 Mission: Building Ethiopia's Digital Future Today. | 942,108 Citizens Registered.</div>
 </div>
 
 <div class="container">
     <section class="hero" id="hero"></section>
 
-    <h2 class="section-h" id="h-tr">Official Tracks</h2>
+    <h2 class="section-h" id="h-tr">Digital Tracks</h2>
     <div class="grid" id="tr-grid"></div>
 
     <h2 class="section-h" id="h-faq">FAQ</h2>
-    <div class="faq-card" id="faq-list"></div>
+    <div class="faq-box" id="faq-list"></div>
 </div>
 
-<footer style="text-align:center; padding:40px; color:#888;">© 2026 ልማት Hub</footer>
+<footer style="text-align:center; padding:60px; color:#475569; font-size: 0.9rem; border-top: 1px solid rgba(255,255,255,0.05);">
+    © 2026 ልማት Hub | Developed by Robel
+</footer>
 
 <script>
+    function welcomeUser() {
+        alert("Welcome to the Premium Lemat Hub. This unique version was custom-built for Digital Ethiopia 2026.");
+    }
+
     const tracks = [
         {n: "AI Engineering", img: "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=400"},
         {n: "Cyber Security", img: "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=400"},
-        {n: "Web Development", img: "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=400"},
+        {n: "Web Systems", img: "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=400"},
         {n: "Data Science", img: "https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=400"},
-        {n: "Cloud Computing", img: "https://images.unsplash.com/photo-1544197150-b99a580bb7a8?w=400"}
+        {n: "Cloud Architecture", img: "https://images.unsplash.com/photo-1544197150-b99a580bb7a8?w=400"}
     ];
 
     const faqs = [
-        {q: "What is Fayda ID?", a: "Fayda is the national digital ID for Ethiopia."},
-        {q: "Is it free?", a: "Yes, all training tracks are 100% free for citizens."},
-        {q: "How to enroll?", a: "Enter your 10-digit Fayda ID in the box above."},
-        {q: "Are there certificates?", a: "Yes, you get a digital certificate after completion."},
-        {q: "Can I take 2 tracks?", a: "You can take one track at a time."}
+        {q: "Why use Fayda ID?", a: "Fayda provides a secure, single identity for all Ethiopian digital services."},
+        {q: "Is there a deadline?", a: "Enrollment is open until the 1 million citizen goal is reached in 2026."},
+        {q: "What hardware is needed?", a: "A basic laptop or smartphone with internet access is enough to start."},
+        {q: "Are the instructors local?", a: "Tracks are led by a mix of local experts and international tech leaders."},
+        {q: "Is this globally recognized?", a: "Yes, our certificates are mapped to international industry standards."}
     ];
 
-    const dict = {
-        en: {w:"Digital Mission 2026", s:"Enter 10-Digit Fayda ID", v:"VERIFY", tr:"Official Tracks", fq:"FAQ"},
-        am: {w:"ዲጂታል ተልዕኮ 2026", s:"ባለ 10 አሃዝ የፋይዳ መታወቂያ", v:"አረጋግጥ", tr:"ይፋዊ ትራኮች", fq:"ጥያቄዎች"},
-        om: {w:"Misiyoona Diijitaalaa 2026", s:"ID Faydaa galchaa", v:"MIRKANEESSI", tr:"Kallattiiwwan", fq:"Gaaffii"},
-        ti: {w:"ዲጂታል ሚሽን 2026", s:"መለለዪ ፋይዳ የእትዉ", v:"ኣረጋግፅ", tr:"ዝተመረፁ ትራኮች", fq:"ሕቶታት"}
-    };
-
-    function setL(l) {
-        const d = dict[l];
-        document.querySelectorAll('.l-btn').forEach(b => b.classList.remove('active'));
-        document.getElementById(l+'-btn').classList.add('active');
-
-        // FORCE HERO CONTENT
+    function loadContent() {
         document.getElementById('hero').innerHTML = `
-            <h1>${d.w}</h1>
-            <p style="margin: 15px 0;">${d.s}</p>
-            <input type="number" id="f-id" class="id-input" placeholder="0000000000"><br>
-            <button onclick="alert('Success!')" class="v-btn">${d.v}</button>`;
+            <h1>Digital Mission 2026</h1>
+            <p style="color:#94a3b8; font-size:1.2rem;">Verify your identity to unlock 5 professional tracks.</p>
+            <input type="number" id="f-id" class="id-input" placeholder="Enter 10-Digit Fayda ID"><br>
+            <button onclick="enroll()" class="v-btn">START LEARNING</button>
+        `;
 
-        // FORCE TRACKS TO LOAD
         const g = document.getElementById('tr-grid'); g.innerHTML = "";
         tracks.forEach(t => {
             g.innerHTML += `<div class="card"><img src="${t.img}"><div class="card-body">${t.n}</div></div>`;
         });
 
-        // FORCE FAQ TO LOAD
         const f = document.getElementById('faq-list'); f.innerHTML = "";
         faqs.forEach(item => {
-            f.innerHTML += `<details><summary>${item.q}</summary><p style="padding-top:10px;">${item.a}</p></details>`;
+            f.innerHTML += `<details><summary>${item.q}</summary><p>${item.a}</p></details>`;
         });
-
-        document.getElementById('h-tr').innerText = d.tr;
-        document.getElementById('h-faq').innerText = d.fq;
     }
 
-    setL('en');
+    function showAbout() { alert("This platform is a custom-engineered solution for the 2026 Digital Ethiopia Initiative."); }
+    function enroll() { 
+        const id = document.getElementById('f-id').value;
+        if(id.length === 10) alert("Access Granted to Robel's Digital Portal!"); 
+        else alert("Please enter exactly 10 digits.");
+    }
+
+    loadContent();
 </script>
 </body>
 </html>
