--- a/index.html
+++ b/index.html
@@ -1,51 +1,87 @@
-<style>
-    /* ... existing styles ... */
-    .card-tech { font-size: 0.8rem; color: #38bdf8; margin-top: 5px; font-weight: 400; }
-    .career-tag { font-size: 0.7rem; background: rgba(56, 189, 248, 0.2); padding: 2px 8px; border-radius: 10px; display: inline-block; margin-top: 10px; }
-</style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ልማት Hub | Career Edition</title>
+    <style>
+        :root { --dark: #0f172a; --accent: #38bdf8; --yellow: #FFD700; }
+        * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Inter', sans-serif; scroll-behavior: smooth; }
+        body { background: var(--dark); color: #f8fafc; }
+        header { background: rgba(15, 23, 42, 0.9); backdrop-filter: blur(10px); padding: 15px 5%; display: flex; justify-content: space-between; align-items: center; position: sticky; top: 0; z-index: 1000; border-bottom: 1px solid rgba(255,255,255,0.1); }
+        .logo { font-size: 24px; font-weight: 900; color: var(--accent); text-decoration: none; }
+        nav a { color: #cbd5e1; margin-left: 20px; text-decoration: none; font-weight: 500; cursor: pointer; }
+        .yellow-tracker { background: var(--yellow); color: #000; padding: 10px; font-weight: 800; overflow: hidden; white-space: nowrap; }
+        .scrolling-text { display: inline-block; animation: scroll 25s linear infinite; }
+        @keyframes scroll { from { transform: translateX(100%); } to { transform: translateX(-100%); } }
+        .container { max-width: 1100px; margin: 30px auto; padding: 0 20px; }
+        .hero { background: linear-gradient(135deg, #1e293b, #0f172a); border: 1px solid rgba(255,255,255,0.1); padding: 60px 20px; border-radius: 30px; text-align: center; }
+        .hero h1 { font-size: 2.8rem; margin-bottom: 15px; color: #fff; }
+        .id-input { background: rgba(255,255,255,0.05); border: 2px solid var(--accent); color: white; padding: 15px; width: 300px; border-radius: 12px; font-size: 1.1rem; text-align: center; margin: 20px 0; }
+        .v-btn { background: var(--accent); color: #0f172a; border: none; padding: 15px 40px; border-radius: 12px; font-weight: 800; cursor: pointer; }
+        .section-h { font-size: 1.8rem; margin: 50px 0 20px; border-left: 8px solid var(--yellow); padding-left: 15px; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); gap: 20px; }
+        .card { background: rgba(30, 41, 59, 0.7); border-radius: 20px; overflow: hidden; border: 1px solid rgba(255,255,255,0.1); transition: 0.3s; }
+        .card:hover { transform: translateY(-5px); border-color: var(--accent); }
+        .card img { width: 100%; height: 140px; object-fit: cover; }
+        .card-body { padding: 15px; text-align: left; }
+        .tech-stack { font-size: 0.75rem; color: var(--accent); margin-top: 5px; }
+        .career-path { font-size: 0.7rem; background: rgba(56, 189, 248, 0.1); padding: 4px 8px; border-radius: 8px; display: inline-block; margin-top: 10px; color: #fff; }
+        .faq-card { background: rgba(30, 41, 59, 0.7); padding: 10px; border-radius: 20px; }
+        details { padding: 15px; border-bottom: 1px solid rgba(255,255,255,0.05); cursor: pointer; }
+        summary { font-weight: bold; color: var(--accent); }
+    </style>
+</head>
+<body>
+
+<header>
+    <a href="#" class="logo">ልማት Hub</a>
+    <nav>
+        <a href="#tr-grid">Tracks</a>
+        <a href="#h-faq">FAQ</a>
+        <a onclick="alert('Digital Ethiopia 2026: Career Technical Initiative')">About Us</a>
+    </nav>
+</header>
+
+<div class="yellow-tracker">
+    <div class="scrolling-text">New Career Tracks Available: AI, Cyber, Web, Data, and Cloud Architecture. | Register with Fayda ID today.</div>
+</div>
+
+<div class="container">
+    <section class="hero" id="hero"></section>
+
+    <h2 class="section-h" id="h-tr">Career Technical Tracks</h2>
+    <div class="grid" id="tr-grid"></div>
+
+    <h2 class="section-h" id="h-faq">FAQ</h2>
+    <div class="faq-card" id="faq-list"></div>
+</div>
+
+<footer style="text-align:center; padding:40px; color:#475569;">© 2026 ልማት Hub | Developed by Robel</footer>
 
 <script>
     const tracks = [
-        {
-            n: "AI Engineering", 
-            img: "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=400",
-            tech: "Python, TensorFlow, Neural Networks",
-            job: "AI Researcher"
-        },
-        {
-            n: "Cyber Security", 
-            img: "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=400",
-            tech: "Ethical Hacking, Network Security",
-            job: "Security Analyst"
-        },
-        {
-            n: "Web Systems", 
-            img: "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=400",
-            tech: "React, Node.js, Database Design",
-            job: "Full-Stack Developer"
-        },
-        {
-            n: "Data Science", 
-            img: "https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=400",
-            tech: "SQL, PowerBI, Statistical Modeling",
-            job: "Data Architect"
-        },
-        {
-            n: "Cloud Architecture", 
-            img: "https://images.unsplash.com/photo-1544197150-b99a580bb7a8?w=400",
-            tech: "AWS, Azure, Docker, Kubernetes",
-            job: "Cloud Engineer"
-        }
+        {n: "AI Engineering", img: "https://images.unsplash.com/photo-1677442136019-21780ecad995?w=400", tech: "Python, Neural Networks", job: "AI Specialist"},
+        {n: "Cyber Security", img: "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?w=400", tech: "Network Security, Hacking", job: "Security Officer"},
+        {n: "Web Systems", img: "https://images.unsplash.com/photo-1498050108023-c5249f4df085?w=400", tech: "React, Node, MongoDB", job: "Full-Stack Engineer"},
+        {n: "Data Science", img: "https://images.unsplash.com/photo-1551288049-bebda4e38f71?w=400", tech: "SQL, Stats, Tableau", job: "Data Analyst"},
+        {n: "Cloud Architecture", img: "https://images.unsplash.com/photo-1544197150-b99a580bb7a8?w=400", tech: "AWS, Docker, Azure", job: "Cloud Specialist"}
     ];
 
-    function loadContent() {
-        // Hero and FAQ remain the same as previous step
+    const faqs = [
+        {q: "What is the Career focus?", a: "Each track is designed to lead directly to a specific job role in Ethiopia's digital economy."},
+        {q: "Is Fayda ID mandatory?", a: "Yes, it is used to track your technical progress and award certificates."},
+        {q: "How long is each course?", a: "Courses range from 3 to 6 months depending on technical complexity."},
+        {q: "Are the labs online?", a: "Yes, you will have access to a virtual lab environment for all technical work."},
+        {q: "Is there placement help?", a: "Successful graduates will be connected to the Digital Mission 2026 partner network."}
+    ];
+
+    function loadSite() {
         document.getElementById('hero').innerHTML = `
-            <h1>Digital Mission 2026</h1>
-            <p style="color:#94a3b8; font-size:1.2rem;">Verify your Fayda ID to begin technical career training.</p>
-            <input type="number" id="f-id" class="id-input" placeholder="Enter 10-Digit Fayda ID"><br>
-            <button onclick="enroll()" class="v-btn">START CAREER</button>
-        `;
+            <h1>Career Technical Hub</h1>
+            <p style="color:#94a3b8;">Enter your 10-Digit Fayda ID to access professional training.</p>
+            <input type="number" id="f-id" class="id-input" placeholder="0000000000"><br>
+            <button onclick="alert('Identity Verified')" class="v-btn">START CAREER</button>`;
 
         const g = document.getElementById('tr-grid'); g.innerHTML = "";
         tracks.forEach(t => {
@@ -53,14 +89,20 @@
                 <div class="card">
                     <img src="${t.img}">
                     <div class="card-body">
-                        <div>${t.n}</div>
-                        <div class="card-tech">${t.tech}</div>
-                        <div class="career-tag">${t.job}</div>
+                        <div style="font-weight:bold; font-size:1.1rem;">${t.n}</div>
+                        <div class="tech-stack">${t.tech}</div>
+                        <div class="career-path">${t.job}</div>
                     </div>
                 </div>`;
         });
-        
-        // FAQ logic remains the same
+
+        const f = document.getElementById('faq-list'); f.innerHTML = "";
+        faqs.forEach(item => {
+            f.innerHTML += `<details><summary>${item.q}</summary><p style="padding-top:10px; color:#94a3b8;">${item.a}</p></details>`;
+        });
     }
-    loadContent();
+
+    loadSite();
 </script>
+</body>
+</html>
